# SistemaHotel

./: .gitignore  create_hotel.sql  pyproject.toml  requirements.txt
.github/workflows/: master_hotel-eela.yml
SistemaHotel/: asgi.py  manage.py
SistemaHotel/SistemaHotel/: settings.py  urls.py  wsgi.py
SistemaHotel/accounts/templates/: login.html  register.html
SistemaHotel/reserva/: forms.py  models.py  urls.py  views.py
SistemaHotel/reserva/migrations/: 0004_hotel_image.py
SistemaHotel/reserva/templates/: hotel_create.html  hotel_detail.html  hotel_list.html  room_create.html
SistemaHotel/static/css/: index.css
SistemaHotel/templates/: body.html
accounts/: urls.py  views.py
accounts/templates/: register.html
reserva/: views.py
reserva/migrations/: 0001_initial.py  0002_hotel_postal_code.py  0003_remove_roomtype_is_vip.py
reserva/templates/: hotel_detail.html  room_list.html
templates/: base.html  body.html
