[project]
name = "django-web"
version = "0.1.0"
description = "Sistema Hotel"
authors = [
    {name = "eapb99",email = "emaalpar@espol.edu.ec"}
]
license = {text = "MIT"}
requires-python = ">=3.12,<4"
dependencies = [
    "django (>=5.1.6,<6.0.0)",
    "pillow (>=11.1.0,<12.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "django-environ (>=0.12.0,<0.13.0)",
    "azure-storage-blob (>=12.24.1,<13.0.0)",
    "django-storages[azure] (>=1.14.5,<2.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
    { include = "SistemaHotel" }
]
name = "django-web"
version = "0.1.0"
description = "Sistema Hotel"
authors = [
    {name = "eapb99",email = "emaalpar@espol.edu.ec"}
]
